PN-16304 - setting variable CSCA_MASTERLIST_S3_PATH and add verifyCodFiscDelegante method in validateMandate